--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.525.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "next": "15.3.4",
